
<p>This is the to-do list.  These are the issues which should either
be addressed before the next full release, or postponed as being
unresolvable just now.  For more wishful thinking, see <ref
id=final.development>.

<dl>
<dt>Bundle Jade with the system
<dd>At present, the distribution consists only of the SGML library stuff.
I need to work out the magic to get Jade to build on Suns and Alphas,
and then distribute them together.

<dt>Finish documentation
<dd>Read-through for style, plus more expansive installation notes.

<dt>Use of FPI: should we use <code>-//Starlink//...</code> or
<code>+//IDN star.rl.ac.uk...</code>? 
<dd>The second is a standard `registered prefix' built up from a DNS
domain name.  Is there any prospect of a <code>starlink.ac.uk</code>
domain name?

<dt>Include some facility for dealing with obsolete exported IDs.
<dd>One
possibility (discussed at the programmers' meeting) was <code>&lt;sect
id=newid>Intro&lt;oldid id=oldid></code>, but that's not very flexible
-- it'd only apply to sections.  I thought instead of
<verbatim><![cdata[
<!element oldidlist o o (oldid+)>
<!element oldid     - o EMPTY>
<!attlist oldid
	id	id	#required	-- the now-obsolete id --
	newid	idref	#requred	-- replacement --
	-- resolve a reference to this element as if it were a
           reference to the element pointed to by newid, but
	   warn or issue an error about a deprecation --
	export	(export) #fixed export	-- for compat/consistency? --
	>
]]></verbatim>
This means that at the top of the document (probably), you could
include a list of elements:
<verbatim>
&lt;oldidlist>
&lt;oldid id=old.id newid=replacement.id>
&lt;oldid id=another.id newid=another.replacement>
&lt;/oldidlist>
</verbatim>
This is both perfectly generic, and usefully visible.

<dt>Development of the programcode DTD
<dd>As discussed in <ref id=doccode.devel>, I am uncertain of the
optimal balance between flexibility and structure in the programcode